# idea_miner

./: .gitignore  README.md  idea_miner_draft.txt  pyproject.toml
idea_miner/: __init__.py  analyzer.py  cli.py  data_loader.py  reporting.py
src/idea_miner/: __init__.py  analysis.py  loader.py  main.py  report.py
tests/: test_analysis.py  test_analyzer.py  test_data_loader.py
